# dog

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  dumbbell_hex.urdf  hex_weight.stl  keyboard_control.py  model_2900.pt  package.xml  play_go2_diyleg.py  walk_and_grasp.py  walk_and_grasp_flow.md
basket/: basket.urdf  basket.xml
config/: display.rviz  gazebo_controllers.yaml  joint_controllers.yaml  rviz_pose.yaml
go2_description/dae/: base.dae
go2_description/meshes/: calf.dae  calf_mirror.dae  foot.dae  hip.dae  thigh.dae  thigh_mirror.dae
launch/: display.launch  empty_world_custom.world  gazebo_diy.launch  gazebo_moveit.launch  gazebo_walk.launch
leg_manipulator/: CMakeLists.txt  CMakeLists.txt.ros1.bak  convert_urdf_to_mjcf.py  go2_with_diy_leg.urdf  package.xml  package.xml.ros1.bak
leg_manipulator/config/: display.rviz
leg_manipulator/launch/: display.launch.py  display.launch.ros1.bak  gazebo.launch  gazebo.launch.py
leg_manipulator/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL
leg_manipulator/mjcf/: build_mjcf.py  go2_diyleg.xml
leg_manipulator/urdf/: default_joint_angles.yaml  go2_with_diy_leg.urdf  leg_manipulator.csv  leg_manipulator.urdf
meshes/: base_link.STL  link1.STL  link3.STL  link4.STL
models/small_table/: model.config  model.sdf
models/strawberry/: model.config  model.sdf
scripts/: arm_keyboard_control.py  arm_trajectory_bridge.py  pybullet_sim2sim.py  stand_controller.py  walk_controller.py
scripts/rsl_rl/: play.py
src/leg_manipulator/: CMakeLists.txt
urdf/: go2_with_diy_leg.urdf
walk_model/: events.out.tfevents.1775251164.taieROG.360522.0  export_onnx.py  go2_diyleg_walk_policy.onnx  go2_diyleg_walk_policy_1700.onnx  go2_diyleg_walk_policy_6200.onnx  model_1700.pt
walk_model/git/: unitree_rl_lab.diff
(+29 files in other folders)
