<?xml version="1.0"?>
<package format="2">
  <name>leg_manipulator</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for leg_manipulator (Go2 + DIY leg)
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>gazebo_plugins</depend>
  <depend>controller_manager</depend>
  <depend>position_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>controller_manager_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
